<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pizzeria</string>
    <string name="napolitean">Neapolitan</string>
    <string name="royale">Royale</string>
    <string name="mountain">Moutain</string>
    <string name="fourSeasons">Four Seasons</string>
    <string name="raclette">Raclette</string>
    <string name="hawaii">Hawaii</string>
    <string name="pannaCotta">Panna Cotta</string>
    <string name="tiramisu">Tiramisu</string>
    <string name="deleteOrders">Delete Orders</string>
    <string name="chooseTable">Table number</string>
    <string name="validate">Validate</string>
    <string name="inputTableNumberHint">13</string>
    <string name="tableDescription">Order for table number : </string>
    <string name="tableNumFormatError">Choose a valid number between 1 and 99</string>
    <string name="mozzarella">Mozzarella</string>
    <string name="gorgonzola">Gorgonzola</string>
    <string name="anchovies">Anchovies</string>
    <string name="capers">Capers</string>
    <string name="olives">Olives</string>
    <string name="artichokes">Artichokes</string>
    <string name="rawHam">Raw ham</string>
    <string name="cookedHam">Cooked ham</string>
    <string name="customPizza">Custom pizza</string>
    <string name="backToPizza">Back to pizza menu</string>
</resources>
